@@ -109,8 +109,8 @@ User_extensions_routine _RTEMS_tasks_Delete_extension(
   while (tvp) {
     next = tvp->next;
     if  (tvp->dtor)
-        (*tvp->dtor)(*tvp->ptr );
-    if (executing == deleted)
+        (*tvp->dtor)(*tvp->ptr);
+    if (_Thread_Is_executing(deleted))
         *tvp->ptr = tvp->gval;
     _Workspace_Free( tvp );
     tvp = next;
